lab/stacks/jenkins/manifests/bootstrap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: bootstrap
  name: bootstrap
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bootstrap
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins-teleport: "true"
        io.kompose.service: bootstrap
    spec:
      containers:
        - args:
            - -c
            - /etc/teleport.d/scripts/generate-certs.sh
          command:
            - /bin/sh
          image: quay.io/gravitational/teleport-lab:9
          name: teleport-bootstrap
          resources: {}
          volumeMounts:
            - mountPath: /etc/teleport
              name: config
            - mountPath: /var/lib/teleport
              name: data
            - mountPath: /mnt/shared/certs
              name: certs
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: certs
          persistentVolumeClaim:
            claimName: certs
status: {}
