lab/stacks/jenkins/manifests/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: jenkins
    spec:
      containers:
        - env:
            - name: JENKINS_PASSWORD
          image: docker.io/bitnami/jenkins:2
          name: jenkins
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/jenkins
              name: jenkins-data
      restartPolicy: Always
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-data
status: {}
