lab/stacks/jenkins/manifests/teleport-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: teleport
  name: teleport
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: teleport
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins-teleport: "true"
        io.kompose.service: teleport
    spec:
      containers:
        - args:
            - -c
            - /usr/bin/dumb-init teleport start -d -c /etc/teleport.d/teleport.yaml
          command:
            - /bin/sh
          image: quay.io/gravitational/teleport-lab:9
          name: teleport
          ports:
            - containerPort: 3023
            - containerPort: 3024
            - containerPort: 3025
            - containerPort: 443
          resources: {}
          volumeMounts:
            - mountPath: /etc/teleport
              name: config
            - mountPath: /var/lib/teleport
              name: data
            - mountPath: /mnt/shared/certs
              name: certs
      hostname: luna.teleport
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: certs
          persistentVolumeClaim:
            claimName: certs
status: {}
