lab/stacks/jenkins/manifests/teleport-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: teleport
  name: teleport
spec:
  ports:
    - name: "3023"
      port: 3023
      targetPort: 3023
    - name: "3024"
      port: 3024
      targetPort: 3024
    - name: "3025"
      port: 3025
      targetPort: 3025
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: teleport
status:
  loadBalancer: {}
