lab/stacks/jenkins/manifests/jenkins-teleport-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jenkins-teleport
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jenkins-teleport: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jenkins-teleport: "true"
